@@ -8,7 +8,7 @@ fimrc \- \fB fim \fP configuration file and language reference
 .SH SYNOPSIS
 .B ~/.fimrc
 .fi
-.B /etc/fimrc
+.B /usr/local/etc/fimrc
 .fi
 .B fim \-\-script\-from\-stdin [ {options} ] < {scriptfile}
 .fi
@@ -234,7 +234,7 @@ color [desaturate] : desaturate the displayed image colors; color [negate] : neg
 .B
 desc
 .fi
-desc 'load' {filename} [{sepchar}] : load description file {filename}, using the optional {sepchar} character as separator; ['\-all'] ['\-append'] 'save' {filename} [{sepchar}] : save current list descriptions to file {filename}, using the optional {sepchar} character as separator, and if '\-all' is present will save the variables, and if '\-append' is present, will only append, and if '\-nooverw' is present, will not overwrite existing files. See documentation of \-\-load\-image\-descriptions\-file for the format of {filename}.
+desc 'load' {filename} [{sepchar}] : load description file {filename}, using the optional {sepchar} character as separator; 'reload' : load once again description files specified at the command line with \-\-load\-image\-descriptions\-file, with respective separators; ['\-all'] ['\-append'] 'save' {filename} [{sepchar}] : save current list descriptions to file {filename}, using the optional {sepchar} character as separator, and if '\-all' is present will save the variables, and if '\-append' is present, will only append, and if '\-nooverw' is present, will not overwrite existing files. See documentation of \-\-load\-image\-descriptions\-file for the format of {filename}.
 .fi
 
 .na
